# inifile-cpp

./: CMakeLists.txt  CPPLINT.cfg  README.md  README_zh.md
.github/workflows/: cmake.yml
docs/: api_reference.md  design_zh.md
examples/: custom_type_conversion.cpp  decode_ini_file.cpp  encode_ini_file.cpp  load_ini_file.cpp  save_ini_file.cpp
include/: inicpp.h
tests/: CMakeLists.txt  test_convert.cpp  test_edge_cases.cpp  test_file_io.cpp  test_inifield.cpp  test_inifile.cpp  test_inisection.cpp
